# SquareSum

./: LICENSE  README.md  SquareSum.cabal  stack.yaml
src/: GraphSquares.hs
