name:                SquareSum
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/banditpig/SquareSum#readme
license:             BSD3
license-file:        LICENSE
author:              Mike Houghton
maintainer:          mike_k_houghton@yahoo.co.uk
copyright:           2018 Mike Houghton
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable SquareSum
  hs-source-dirs:      src
  main-is:             GraphSquares.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,  graphviz, text
